# forge

./: .gitignore  DEMO.md  DOCS.md  README.md  install.ps1  install.sh  pyproject.toml
forge/: cli.py
forge/commands/: bridge.py  commits.py  compress.py  context.py  docs.py  graph.py  prompt.py  run.py  spec.py  stats.py
forge/core/: compress.py  git_tracker.py  store.py  templates.py
